<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/iv_image_authentication"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/image_authentication_logo"
        android:src="@drawable/mystory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tv_punchline_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/my_story_your_story"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/iv_image_authentication"
        app:layout_constraintStart_toStartOf="@id/iv_image_authentication"
        app:layout_constraintTop_toBottomOf="@id/iv_image_authentication" />

    <TextView
        android:id="@+id/tv_punchline_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/post_your_story_the_the_world"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/tv_punchline_app"
        app:layout_constraintStart_toStartOf="@id/tv_punchline_app"
        app:layout_constraintTop_toBottomOf="@id/tv_punchline_app" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/edt_password_login_text"
        app:layout_constraintStart_toStartOf="@id/edt_password_login_text"
        app:layout_constraintTop_toBottomOf="@id/edt_password_login_text" />

    <EditText
        android:id="@+id/edt_email_login_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="johndoe@email.com"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/tv_punchline_description"
        app:layout_constraintStart_toStartOf="@id/tv_punchline_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_punchline_description"/>

    <com.jeflette.storyapps.ui.customview.CustomPasswordEditText
        android:id="@+id/edt_password_login_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="qWerQr"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/edt_email_login_text"
        app:layout_constraintStart_toStartOf="@id/edt_email_login_text"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_login_text" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:onClick="navigateToRegister"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/jeflette_developer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>